Luke: Made Shenandoah and NoVa labels bold rather than larger(can make larger but spacing issues).  fixed issue where leaflet output at height 150 was knocking virginia title out of alignment(needs to stay below 140).  Added "(optional)" to all text non-NORMAL LFAA output

--- a/www/CSS/main.css
+++ b/www/CSS/main.css
@@ -101,6 +101,7 @@ li {
 .p5 {
   color:black;
   font-size:17px;
+  font-weight:bold;
 }
 
 .ibox {
